[package]
name = "dropbox-content-hash"
version = "0.2.0"
authors = ["Bill Fraser <bill@wfraser.dev>"]
edition = "2021"

[[bin]]
name = "dropbox-content-hash"
required-features = ["cli"]

[features]
cli = ["clap", "parallel"]
parallel = ["parallel_reader"]

[dependencies]
parallel_reader = { optional = true, version = "0.1.2" }
ring = "0.17.14"
clap = { optional = true, version = "4", features = ["cargo", "derive", "string"] }
